# raven-agent

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  install.sh
.cargo/: config.toml
.github/workflows/: ci.yml  release-desktop.yml  release.yml
crates/cli/: Cargo.toml
crates/cli/src/: commands.rs  config_io.rs  input.rs  main.rs  settings.rs
crates/config-system/: Cargo.toml
crates/config-system/src/: hot_reload.rs  lib.rs  platform.rs  prompts.rs  tests.rs
crates/context-engine/: Cargo.toml
crates/context-engine/src/: budget.rs  cache.rs  checkpoint.rs  lib.rs  session.rs
crates/http-api/: Cargo.toml
crates/http-api/src/: lib.rs
crates/model-router/: Cargo.toml
crates/model-router/src/: anthropic.rs  gemini.rs  lib.rs  openai_compat.rs
crates/raven-core/: Cargo.toml
crates/raven-core/src/: ask_user.rs  confirm.rs  doctor.rs  lib.rs  permission.rs  prompt.rs  run.rs  subagent.rs
crates/raven-types/: Cargo.toml
crates/raven-types/src/: config.rs  error.rs  lib.rs  message.rs  model.rs  provider.rs  tests.rs  util.rs
crates/tool-system/: Cargo.toml
crates/tool-system/src/: builtin.rs  diff_display.rs  file_edit.rs  git_first.rs  lib.rs  mcp.rs  repo_map.rs  view.rs  web_tools.rs
crates/tool-system/src/builtin/: file_io.rs  git.rs  list_dir.rs  mod.rs  search.rs  shell.rs
crates/tool-system/src/web_tools/: fetch_url.rs  html.rs  mod.rs  web_search.rs
crates/tui/: Cargo.toml
crates/tui/src/: helper.rs  latex.rs  latex_unicode.rs  lib.rs  render.rs  stream.rs  theme.rs  tool_display.rs  width.rs
desktop/: Cargo.toml
desktop/src/: index.html
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: main.rs
docs/: TODO-streaming-toolcalls.md
docs/todo/: 01-tui-table-rendering.md  02-shell-interactive-confirm.md  README.md
editors/vscode/: package.json
editors/vscode/src/: apiClient.ts  chatPanel.ts  extension.ts
web/: index.html
