[package]
name = "raven-desktop"
version = "0.1.0"
description = "Raven Desktop App"
edition = "2021"
rust-version = "1.70"

[dependencies]
tauri = { version = "1.6", features = ["shell-open", "http-all"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
raven-types = { path = "../crates/raven-types" }
raven-core = { path = "../crates/raven-core" }
config-system = { path = "../crates/config-system" }
context-engine = { path = "../crates/context-engine" }
model-router = { path = "../crates/model-router" }
tool-system = { path = "../crates/tool-system" }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[workspace]
# 独立 workspace，依赖外部 crates
