[package]
name = "config-system"
version.workspace = true
edition.workspace = true
license.workspace = true

description = "Configuration management with TOML + validation"

[dependencies]
raven-types = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
dirs = { workspace = true }
tracing = { workspace = true }
atty = { workspace = true }
tokio = { workspace = true }
