[package]
name = "context-engine"
version.workspace = true
edition.workspace = true
license.workspace = true

description = "Context management and token budgeting"

[dependencies]
raven-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
sha2 = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
