[package]
name = "http-api"
version.workspace = true
edition.workspace = true
license.workspace = true

description = "HTTP API server with SSE streaming"

[dependencies]
raven-types = { workspace = true }
raven-core = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }
chrono = { workspace = true }
