[package]
name = "model-router"
version.workspace = true
edition.workspace = true
license.workspace = true

description = "Model routing and provider verification"

[dependencies]
raven-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
sha2 = { workspace = true }
eventsource-stream = { workspace = true }
futures-util = { workspace = true }
chrono = { workspace = true }
