[package]
name = "raven-core"
version.workspace = true
edition.workspace = true
license.workspace = true

description = "Core Raven agent loop implementation"

[dependencies]
raven-types = { workspace = true }
config-system = { workspace = true }
model-router = { workspace = true }
tool-system = { workspace = true }
context-engine = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
crossterm = { workspace = true }
futures = { workspace = true }
